Remove color from the autogenerated clipboard brush name

BUG:440311