plugins/paintops/libpaintop/kis_clipboard_brush_widget.cpp
@@ -137,7 +137,7 @@ void KisClipboardBrushWidget::slotAddPredefined()
         KisGbrBrushSP resource = m_brush->clone().dynamicCast<KisGbrBrush>();
 
         if (nameEdit->text().isEmpty()) {
-            resource->setName(QDateTime::currentDateTime().toString("yyyy-MM-ddThh:mm"));
+            resource->setName(QDateTime::currentDateTime().toString("yyyy-MM-ddThh"));
         }
         else {
             resource->setName(name);
